--- a/index.html
+++ b/index.html
@@ -4,69 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Ich Liebe Dich ">
     <title>Love</title>
+    <link rel="shortcut icon" href="./assets/heart.png" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"
     />
-    <style>
-      @charset "UTF-8";
-      body {
-        background-size: cover;
-        font-family: "Open Sans";
-        font-size: 16px;
-      }
-
-      .bottom,
-      .paper {
-        margin: 2rem auto;
-      }
-
-      .bottom {
-        background-color: #a4231f;
-        height: 650px;
-        max-width: 450px;
-        transform: rotate(-7.5deg);
-        width: 100%;
-      }
-
-      .paper {
-        background-color: #fff;
-        box-shadow: -1px 3px 3px 3px #222;
-        font-size: 4rem;
-        height: 550px;
-        max-width: 350px;
-        line-height: 1;
-        padding: 2.5rem 4rem;
-        position: relative;
-        text-transform: uppercase;
-        transform: rotate(7.5deg);
-        width: 100%;
-        z-index: 10px;
-      }
-      .paper p {
-        margin-top: 0;
-      }
-      .paper p:after {
-        bottom: 50px;
-        color: #cb262e;
-        content: "";
-        font-family: fontAwesome;
-        font-size: 2rem;
-        position: absolute;
-        right: 50px;
-      }
-
-      .highlight {
-        color: #cb262e;
-      }
-      .highlight:last-child {
-        display: block;
-      }
-      a {
-        text-decoration: none;
-      }
-    </style>
+    <link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <div class="bottom">
